--- a/_maps/2015-01-28-project-1.markdown
+++ b/_maps/2015-01-28-project-1.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 1
 date: 2015-01-28
 img: wholesystems.jpg
-alt: image-alt
+alt: whole systems map
 project-date: October 2012
 client: North America Region
 category: cartography
